examples/compiler_errors/adversarial/common_dev_mistakes/HiddenApi.flx
module HiddenApi {
    fn secret() -> Int {
        1
    }

    fn _private_secret() -> Int {
        2
    }
}
